[package]
name = "wasm-bindings"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
codec = { path = "../cptv-codec-rs" }

js-sys = "0.3.69"

wasm-bindgen = "0.2.92"
serde = { version = "1.0.198", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
pollster = "0.3.0"

# Routing messages to the JS error console
console_log = "1.0.0"
console_error_panic_hook = "0.1.7"
log = "0.4.21"

flate2 = "1.0.28"
web-sys = { version = "0.3.69", features = ["ReadableStreamDefaultReader"] }
wasm-bindgen-futures = "0.4.42"
nom = "7.1.3"
